--- a/indexbackup.html
+++ b/indexbackup.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <div class="split left">
+    <div id = "insert" class="split left">
         <div class="task-wrapper">
             <header>Sample task 1</header>
             
